--- a/tutorials/changes_slides_deck.qmd
+++ b/tutorials/changes_slides_deck.qmd
@@ -168,7 +168,7 @@ Open Geospatial Consortium (OGC), a non-profit international organization that d
 
 ## USGS Water Data API Token 
 
-* The Water Data API limit how many queries a single IP address can make per hour
+* The Water Data APIs limit how many queries a single IP address can make per hour
 
 * You **can** run new `dataRetrieval` functions without a token
 
