--- a/tutorials/changes_slides_deck.qmd
+++ b/tutorials/changes_slides_deck.qmd
@@ -204,7 +204,7 @@ See next slide for a demonstration.
 
 ## Water Data API Token: Example {.smaller}
 
-My favorite method to do add your token to .Renviorn is to use the `usethis` package. Let's pretend the token sent you was "abc123":
+My favorite method to do add your token to .Renviron is to use the `usethis` package. Let's pretend the token sent you was "abc123":
 
 1. Run in R:
 ```{r}
