--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ If you have additional questions about these changes, email CompTools@usgs.gov.
 
 2. Get daily USGS data (for example, mean daily discharge). Start here: `?read_waterdata_daily`
 
-3. Get USGS groundwater data. Start here: `?read_waterdata_field_measurements`
+3. Get discrete USGS groundwater data. Start here: `?read_waterdata_field_measurements`
 
 4. Get discrete water quality data from a cooperative service that integrates publicly available water-quality data from the USGS, EPA, and over 400 state, federal, tribal, and local agencies. Start here: `?readWQPdata`
 
