--- a/tutorials/changes_slides_deck.qmd
+++ b/tutorials/changes_slides_deck.qmd
@@ -155,7 +155,7 @@ Open Geospatial Consortium (OGC), a non-profit international organization that d
 
 * [read_waterdata_latest_continuous](https://doi-usgs.github.io/dataRetrieval/reference/read_waterdata_latest_continuous.html) - Latest continuous data
 
-* [read_waterdata_field_measurements](https://doi-usgs.github.io/dataRetrieval/reference/read_waterdata_field_measurements.html) - Latest continuous data
+* [read_waterdata_field_measurements](https://doi-usgs.github.io/dataRetrieval/reference/read_waterdata_field_measurements.html) - Discrete hydrologic data (gage height, discharge, and readings of groundwater levels)
 
 * [read_waterdata](https://doi-usgs.github.io/dataRetrieval/reference/read_waterdata.html) - Generalized function
 
@@ -679,7 +679,7 @@ leaflet(data = sites_mn_wi |>
 
 ## read_waterdata HUCs
 
-HUCs that fall within 02070010. Use the wildcard `%`
+Let's find a list of sites with HUCs that fall within 02070010. Use the wildcard `%`
 
 ```{r}
 # Here's how to get 
@@ -776,11 +776,32 @@ In GitHub:
       API_USGS_PAT: ${{ secrets.API_USGS_PAT }}
 ```
 
-## Adding API token: Posit Connect
+## Adding API token: Posit Connect {.smaller}
 
 You'll want to add a token for any Posit Connect product (Shiny app, Quarto slides, etc.).
 
-![](images/posit_connect.png)
+:::: {.columns}
+
+::: {.column width="35%"}
+
+![](images/posit_connect.png){width=225}
+:::
+
+::: {.column width="5%"}
+OR
+:::
+
+::: {.column width="60%"}
+
+![](images/publish.png){width=600}
+
+:::
+
+::::
+
+::: footer
+
+:::
 
 ## Discrete Data {.smaller}
 
