--- a/README.Rmd
+++ b/README.Rmd
@@ -40,9 +40,9 @@ If you have additional questions about these changes, email CompTools@usgs.gov.
 
 # What would you like to do?
 
-1. Get instantaneous USGS data (for example, discharge sensor data). Start here: `?readNWISuv`
+1. Get instantaneous USGS data (for example, discharge sensor data). Start here: `?readNWISuv`. If you only need the latest value, you can use the function: `?read_waterdata_latest_continuous`.
 
-2. Get daily USGS data (for example, mean daily discharge). Start here: `?read_waterdata_daily`
+2. Get daily USGS data (for example, mean daily discharge). Start here: `?read_waterdata_daily`. If you only need the latest value, you can use the function: `?read_waterdata_latest_daily`.
 
 3. Get discrete USGS groundwater data. Start here: `?read_waterdata_field_measurements`
 
@@ -58,9 +58,7 @@ For additional tutorials, see:
 
 [Basic Tutorial](https://doi-usgs.github.io/dataRetrieval/articles/tutorial.html)
 
-[dataRetrieval Introduction 1](https://rconnect.usgs.gov/dataRetrieval_workshop)
-
-[dataRetrieval Introduction 2](https://rconnect.usgs.gov/NMC_dataRetrieval_2)
+[dataRetrieval Introduction Slideshow](https://doi-usgs.github.io/dataRetrieval/tutorials/basic_slides_deck.html#/title-slide)
 
 
 # Installation of dataRetrieval
