--- a/README.Rmd
+++ b/README.Rmd
@@ -40,7 +40,7 @@ If you have additional questions about these changes, email CompTools@usgs.gov.
 
 # What would you like to do?
 
-1. Get instantaneous USGS data (for example, discharge sensor data). Start here: `?readNWISuv`. If you only need the latest value, you can use the function: `?read_waterdata_latest_continuous`.
+1. Get instantaneous USGS data (for example, discharge sensor data). Start here: `?read_waterdata_continuous`. If you only need the latest value, you can use the function: `?read_waterdata_latest_continuous`.
 
 2. Get daily USGS data (for example, mean daily discharge). Start here: `?read_waterdata_daily`. If you only need the latest value, you can use the function: `?read_waterdata_latest_daily`.
 
