--- a/vignettes/movingAverages.Rmd
+++ b/vignettes/movingAverages.Rmd
@@ -16,9 +16,11 @@ editor_options:
   chunk_output_type: console
 ---
 
-:warning: 
+**WARNING**
+
 This post is very old! A better way to do all these plots and calculations can be found here: <https://doi-usgs.github.io/HASP/>
 
+**WARNING**
 
 This post will show simple way to calculate moving averages, calculate historical-flow quantiles, and plot that information. The goal is to reproduce the graph at this link:
 [PA Graph](http://pa.water.usgs.gov/drought/indicators/sw/images/f30_01538000.html). The motivation for this post was inspired by a USGS colleague that that is considering creating these type of plots in R. We thought this plot provided an especially fun challenge - maybe you will, too!
@@ -261,10 +263,9 @@ styled.plot <- simple.plot +
     panel.grid.major = element_blank(),
     panel.grid.minor = element_blank()
   ) +
-  labs(list(
-    title = title.text,
+  labs(title = title.text,
     y = "30-day moving ave", x = ""
-  )) +
+  ) +
   scale_fill_manual(
     name = "", breaks = label.text,
     values = c("red", "orange", "yellow", "darkgreen")
