--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -86,11 +86,11 @@ Replace [your api key] with the alphanumeric code provided by the sign-up page. 
 
 ## Large Data Pulls
 
-If your work includes pulling large amounts of data, there are a few things to consider when converting to the waterdata functions. The vast majority of workflows have a pretty consistent flow compared with NWIS data pulls. However, if you manage large data pipelines, you might notice some timeouts or errors indicating your request was too large. This will be especially true for the continuous data. Currently users are only allowed to request up to 3 years of data at a time for continuous data.  
+If you manage large data pipelines, you might notice some timeouts or errors indicating your request was too large. This will be especially true for the continuous data. Continuous data requests are only allowed to up to 3 years of data in a single request. 
 
-If you regularly make full period of record queries, consider if it's possible to wait a few months before rewriting your workflows. We expect that a direct access to full period of record downloads will be available before the NWIS web services are shut down. We plan to make `dataRetrieval` function(s) to access that direct download access. 
+HOWEVER, if you regularly make full period of record queries you may want to wait a few months before rewriting your workflows. We expect that a direct access to full period of record downloads will be available before the NWIS web services are shut down. We plan to make `dataRetrieval` function(s) to access that direct download access. 
 
-Maybe you are running into limitations but a full period-of-record won't necessarily help. Consider using the R package (`targets`)[https://books.ropensci.org/targets/]. Stay tuned as we plan to put together a collection of examples.
+Maybe you are running into limitations but a full period-of-record won't necessarily help. Consider using the R package (`targets`)[https://books.ropensci.org/targets/]. Stay tuned as we plan to put together a collection of examples and suggestions for large data pulls as the API service offerings evolve.
 
 # Discrete Data
 
