--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -86,7 +86,7 @@ Replace [your api key] with the alphanumeric code provided by the sign-up page. 
 
 ## Large Data Pulls
 
-If you manage large data pipelines, you might notice some timeouts or errors indicating your request was too large. This will be especially true for the continuous data. Continuous data requests are only allowed to up to 3 years of data in a single request. 
+If you manage large data pipelines, you might notice some timeouts or errors indicating your request was too large. This will be especially true for the continuous data. Continuous data requests are only allowed up to 3 years of data in a single request. 
 
 HOWEVER, if you regularly make full period of record queries you may want to wait a few months before rewriting your workflows. We expect that a direct access to full period of record downloads will be available before the NWIS web services are shut down. We plan to make `dataRetrieval` function(s) to access that direct download access. 
 
