--- a/vignettes/Status.Rmd
+++ b/vignettes/Status.Rmd
@@ -90,7 +90,7 @@ If you manage large data pipelines, you might notice some timeouts or errors ind
 
 HOWEVER, if you regularly make full period of record queries you may want to wait a few months before rewriting your workflows. We expect that a direct access to full period of record downloads will be available before the NWIS web services are shut down. We plan to make `dataRetrieval` function(s) to access that direct download access. 
 
-Maybe you are running into limitations but a full period-of-record won't necessarily help. Consider using the R package (`targets`)[https://books.ropensci.org/targets/]. Stay tuned as we plan to put together a collection of examples and suggestions for large data pulls as the API service offerings evolve.
+Maybe you are running into limitations but a full period-of-record won't necessarily help. Consider using the R package [`targets`](https://books.ropensci.org/targets/). Stay tuned as we plan to put together a collection of examples and suggestions for large data pulls as the API service offerings evolve.
 
 # Discrete Data
 
